# adakv

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
adakv/: __init__.py  attention.py  baselines.py  baselines_rt.py  budget.py  estimator.py  patch.py  reference.py  runtime.py  selector.py
adakv/kernels/: __init__.py  block_sparse_decode.py
benchmarks/baselines/: quest.py
benchmarks/efficiency/: bench_decode_latency.py
benchmarks/quality/: eval_equal_budget.py  run_needle.py
docs/: design.md
notebooks/: adakv_baseline_eval.ipynb  adakv_eviction_baselines_eval.ipynb  adakv_kernel_dev.ipynb  adakv_needle_eval.ipynb
scripts/: download_models.sh  reproduce_all.sh
tests/: test_baselines.py  test_baselines_runtime.py  test_factorial_selection.py  test_kernel_parity.py  test_reference.py  test_runtime_cpu.py
