[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adakv"
version = "0.1.0"
description = "Query-aware, per-head-adaptive block-sparse attention for long-context LLM decode"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
gpu = ["torch>=2.3", "triton>=2.3", "transformers>=4.44", "accelerate>=0.33"]
bench = ["datasets>=2.20", "tqdm>=4.66", "matplotlib>=3.8"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
include = ["adakv*"]

[tool.ruff]
line-length = 100
target-version = "py310"
